--- a/Contact.html
+++ b/Contact.html
@@ -13,6 +13,7 @@
             </div>
             <div class="main">
                 <ul>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
@@ -37,7 +38,7 @@
             <a href="https://www.facebook.com/">
             <img src="fb1.svg">
             </a> -->
-            <a href="https://www.linkedin.com/in/sri-charan-pendli-066139177/">
+            <a href="https://www.linkedin.com/in/sri-charan-pendli-066139177/" target="_blank">
             <img src="in.png" width="50" height="60">
             </a></center>
         </div>
@@ -45,11 +46,11 @@
 
         <div>
             <center><h2><u>MY WORK</u></h2></center><br>
-        <center><a href="https://www.hackerrank.com/sricharan28">
-            <img src="hr.png" width="50" height="60">
+        <center><a href="https://www.hackerrank.com/sricharan28" target="_blank">
+            <img src="hacker.png"  height="60">
             </a>
-            <a href="https://github.com/sricharan22?tab=repositories">
-            <img src="git.png" width="50" height="60">
+            <a href="https://github.com/sricharan22?tab=repositories" target="_blank">
+            <img src="gitlogo.png"  height="60">
             </a></center>
         </div>
 
@@ -57,7 +58,7 @@
 
         <div>
         <center><h2><u>FEEDBACK OR SUGGESTIONS FOR MY PORTFOLIO</u></h2></center><br>
-    <center><a href="https://docs.google.com/forms/u/1/d/1wzWa-MvNTzbUjS-_E6Yo27DB6Jaj1viiBAZlnNqlg7A/edit?usp=drive_web">
+    <center><a href="https://docs.google.com/forms/u/1/d/1wzWa-MvNTzbUjS-_E6Yo27DB6Jaj1viiBAZlnNqlg7A/edit?usp=drive_web" target="_blank">
             <img src="googleform.png" width="50" height="60">
             </a></center>
         </div>
