--- a/Projects.html
+++ b/Projects.html
@@ -13,6 +13,7 @@
             </div>
             <div class="main">
                 <ul>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
@@ -37,6 +38,7 @@
             <div id="award">
             <h1>AWARDS</h1>
             <p>Our team a warded THIRD in EXCITE 2019 workshop conducted by J-HUB (JNTUH)</p>
+            <br><br><br><br><br>
         </div>
     </div>
 </div>
