--- a/Qualifications.html
+++ b/Qualifications.html
@@ -13,6 +13,7 @@
             </div>
             <div class="main">
                 <ul>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
@@ -21,6 +22,9 @@
             </div>
             
         </header>
+        <br><br>
+        <div id ="spa">
+        <h1>Education</h1>
         <table style="width:100%" class="center">
             <tr>
               <th>Degree</th>
@@ -52,36 +56,37 @@
             </tr>
         </table>
         <h1>Technical Skills</h1>
-        <p>HTML</p>
+        <h3>HTML</h3>
         <div class="container">
         <div class="skills html">90%</div>
         </div>
         
-        <p>C</p>
+        <h3>C</h3>
         <div class="container">
         <div class="skills c">90%</div>
         </div>
 
-        <p>SQL</p>
+        <h3>SQL</h3>
         <div class="container">
         <div class="skills sql">80%</div>
         </div>
 
-        <p>CSS</p>
+        <h3>CSS</h3>
         <div class="container">
         <div class="skills css">80%</div>
         </div>
 
-        <p>PYTHON</p>
+        <h3>PYTHON</h3>
         <div class="container">
         <div class="skills python">75%</div>
         </div>
 
-        <p>MACHINE LEARNING</p>
+        <h3>MACHINE LEARNING</h3>
         <div class="container">
         <div class="skills ml">65%</div>
         </div>
     </div>
+</div>
 </div>
     </body>
 </html>
