--- a/About.html
+++ b/About.html
@@ -9,10 +9,11 @@
             <div id="bor"> 
                 <header>
             <div> 
-                <h1><center>RESUME</center></h1>
+                <h1><center>ABOUT</center></h1>
             </div>
             <div class="main">
                 <ul>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
