--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
     <head>
         <title> ABOUT </title>
         <link rel="stylesheet" href="stylesheet.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="page">
@@ -47,6 +48,8 @@
                 <li>Listening to Arijit Singh songs</li>
                 <li>Reading Thrilling Novels</li>
                 <li>Watching Sci-Fiction movies</li>
+                <li>Cooking</li>
+                <li>Playng Chess</li>
             </ul>
             <h1>Place</h1>
             <p>Mancherial</p>
