--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>PORTFOLIO</title>
 	<link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="wrapper">
@@ -20,10 +21,10 @@
     </div>
 </div>
 <div class="img">
-    <center><h1 style="font-size: 100px;">PORTFOLIO</h1></center><br><br><br><br>
+    <center><h1 style="font-size: 100px; color: white;">PORTFOLIO</h1></center><br><br><br><br>
     <img src="my.jpg" width="400">
-    <h1 style="font-size: 75px; text-align: center; margin-top: -25%;margin-left: 10%;">SRI CHARAN PENDLI</h1><br>
-    <p style="text-align: center; font-size: 30px; margin-right: 25%; margin-left: 35%;"><i>“I came in with near zero programming knowledge and halfway in, I’m quite confident of what I can achieve.”</i></p>
+    <h1 style="font-size: 75px; text-align: center; margin-top: -25%;margin-left: 10%; color: white;">SRI CHARAN PENDLI</h1><br>
+    <p style="text-align: center; font-size: 30px; margin-right: 25%; margin-left: 35%; color: white;"><i>“I came in with near zero programming knowledge and halfway in, I’m quite confident of what I can achieve.”</i></p>
     
 </div>
 </body>
