--- a/About.html
+++ b/About.html
@@ -15,10 +15,12 @@
             <div class="main">
                 <ul>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="startup.html">START-UP</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
                     <li><a href="Contact.html">CONTACT</a></li>
+                    
                 </ul>
             </div>
             <!-- <br><br><br><br><br> -->
