--- a/Projects.html
+++ b/Projects.html
@@ -58,6 +58,7 @@
             <div class="main">
                 <ul>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="startup.html">START-UP</a></li>
                     <li><a href="About.html">ABOUT</a></li>
                     <li><a href="Qualifications.html">QUALIFICATIONS</a></li>
                     <li><a href="Projects.html">PROJECTS</a></li>
