--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,9 @@
         <br><br><br><br><br><br><br>
         <h2>SRI CHARAN</h2>
         <ul>
-            <li><a href="portfolio.html"><i class="fas"></i>Portfolio</a></li>
-            <li><a href="About.html"><i class="fas"></i>About</a></li>
-            <li><a href="Qualifications.html"><i class="fas"></i>Qualifications</a></li>
-            <li><a href="Projects.html"><i class="fas"></i>Projects</a></li>
-            <li><a href="Contact.html"><i class="fas"></i>Contact</a></li>
+            <li><a href="About.html"><i class="fas"></i>RESUME</a></li>
+            <li><a href="startup.html">START-UP</a></li>
+            <li><a href="Contact.html">CONTACT</a></li>
         </ul>
     </div>
 </div>
@@ -24,6 +22,7 @@
     <center><h1 style="font-size: 100px; color: white;">PORTFOLIO</h1></center><br><br><br><br>
     <img src="my.jpg" width="400">
     <h1 style="font-size: 75px; text-align: center; margin-top: -25%;margin-left: 10%; color: white;">SRI CHARAN PENDLI</h1><br>
+    <h2 style="font-size: 40px; text-align: center; margin-left: 10%; color: white;">Web-Developer   *   Web-Designer</h2><br>
     <p style="text-align: center; font-size: 30px; margin-right: 25%; margin-left: 35%; color: white;"><i>“I came in with near zero programming knowledge and halfway in, I’m quite confident of what I can achieve.”</i></p>
     
 </div>
