--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
                 <li>Reading Thrilling Novels</li>
                 <li>Watching Sci-Fiction movies</li>
                 <li>Cooking</li>
-                <li>Playng Chess</li>
+                <li>Playing Chess</li>
             </ul>
             <h1>Place</h1>
             <p>Mancherial</p>
