--- a/Projects.html
+++ b/Projects.html
@@ -79,7 +79,7 @@
                     <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                     <p><b>Book Lending and Returning Machine</b></p>
                     <p><b>Duration:</b> 3 Months<br><b>Type:</b> Minor Project<br><b>Technology Used:</b> Python and PHP<br><b>Description:</b> This machine helps a user to self issue and self deposit the books without the
-                        help of librarian in a library. This machine also has a sepa rate software which is compatible to run
+                        help of librarian in a library. This machine also has a separate software which is compatible to run
                         with RFID Technology and provides best security system to the library.</p>
                 </div>
                 </div>
