--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <br><br><br><br><br><br><br>
         <h2>SRI CHARAN</h2>
         <ul>
-            <li><a href="About.html"><i class="fas"></i>RESUME</a></li>
+            <li><a href="About.html">RESUME</a></li>
             <li><a href="startup.html">START-UP</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
         </ul>
