--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="page">
-        <div id="bor">
+    <!-- <div id="page">
+        <div id="bor"> -->
 <div class="wrapper">
     <div class="sidebar">
         <br><br><br><br><br><br><br>
@@ -28,7 +28,7 @@
     <p style="text-align: center; font-size: 30px; margin-right: 25%; margin-left: 35%; color: white;"><i>“I came in with near zero programming knowledge and halfway in, I’m quite confident of what I can achieve.”</i></p>
     
 </div>
-</div>
-</div>
+<!-- </div>
+</div> -->
 </body>
 </html>
