--- a/portfolio.html
+++ b/portfolio.html
@@ -7,28 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <!-- <div id="page">
-        <div id="bor"> -->
 <div class="wrapper">
     <div class="sidebar">
         <br><br><br><br><br><br><br>
         <h2>SRI CHARAN</h2>
         <ul>
-            <li><a href="About.html"><i class="fas"></i>RESUME</a></li>
+            <li><a href="About.html">RESUME</a></li>
             <li><a href="startup.html">START-UP</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
         </ul>
     </div>
 </div>
 <div class="img">
-    <center><h1 style="font-size: 100px; color: white;">PORTFOLIO</h1></center><br><br><br>
-    <img src="my.jpg" width="400">
+    <center><h1 style="font-size: 100px; color: white;">PORTFOLIO</h1></center>
+    <img src="my.jpg" width="400"><br><br><br><br><br>
     <h1 style="font-size: 75px; text-align: center; margin-top: -25%;margin-left: 10%; color: white;">SRI CHARAN PENDLI</h1><br>
     <h2 style="font-size: 40px; text-align: center; margin-left: 10%; color: white;">Web-Developer   *   Web-Designer</h2><br>
     <p style="text-align: center; font-size: 30px; margin-right: 25%; margin-left: 35%; color: white;"><i>“I came in with near zero programming knowledge and halfway in, I’m quite confident of what I can achieve.”</i></p>
     
 </div>
-<!-- </div>
-</div> -->
 </body>
 </html>
