--- a/startup.html
+++ b/startup.html
@@ -4,34 +4,31 @@
 	<meta charset="UTF-8">
 	<title>START-UP</title>
 	<link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-    <!-- <div id="page">
-        <div id="bor"> -->
+            
 <div class="wrapper">
     <div class="sidebar">
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
         <h2><img src="spi.jpg" width="80"></h2>
         <ul>
-            <li><a href="portfolio.html"><i class="fas"></i>PORTFOLIO</a></li>
-            <li><a href="About.html"><i class="fas"></i>RESUME</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
+            <li><a href="About.html">RESUME</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
         </ul>
     </div>
 </div>
 <div class="img">
-    <center><h1 style="font-size: 70px; color: white;">STANDARD PROGRAMMED INSTRUMENTS</h1></center><br><br><br><br>
+    <center><h1 style="font-size: 70px; color: white;">STANDARD PROGRAMMED INSTRUMENTS</h1></center><br><br><br>
     <img src="myspi.jpg" width="400">
-    </div>
-    <div style="margin-top: -50%;"><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br><br>
+    <div style="margin-top: -50%;">
            <!-- <img src="spi.jpg" width="400"> -->
     <h1 style="font-size: 50px; text-align: center;margin-left: -5%;margin-left: 10%; color: white;">Library Automation</h1><br><br>
-    <h2 style="font-size: 30px; text-align: center; margin-left: 10%; color: white;">BARCODE   *   RFID</h2><br><br><br>
-    <p style="text-align: center; font-size: 20px; margin-right: 25%; margin-left: 35%; color: white;"><i>Library automation refers to the use of the computer to automate the typical procedures of libraries such as cataloging and circulation. In the process of library automation, a library makes the use of computers and other technologies to support its systems and services. Library automation is the conversion of a library’s procedures from manual to computerized, such as from a card catalog to an OPAC, or from manual circulation cards to an integrated library system.<br><br><br><br>Automation is a process of using machinery for easily working and saving human power and time. The main purpose of library automation is to free the librarians and library staff and to allow them to contribute more meaningfully to the spread of knowledge and information. In Library Science automation is ‘the technology concerned with the design and development of the process and system that minimizes the necessity of human intervention in their operation.’</i></p>  
-    <br><br><br><br><br><br><br><br><br><br>
+    <h2 style="font-size: 30px; text-align: center; margin-left: 10%; color: white;">BARCODE   *   RFID</h2><br><br>
+    <p style="text-align: center; font-size: 20px; margin-right: 25%; margin-left: 35%; color: white;"><i>Library automation refers to the use of the computer to automate the typical procedures of libraries such as cataloging and circulation. In the process of library automation, a library makes the use of computers and other technologies to support its systems and services. Library automation is the conversion of a library’s procedures from manual to computerized, such as from a card catalog to an OPAC, or from manual circulation cards to an integrated library system.<br><br><br>Automation is a process of using machinery for easily working and saving human power and time. The main purpose of library automation is to free the librarians and library staff and to allow them to contribute more meaningfully to the spread of knowledge and information. In Library Science automation is ‘the technology concerned with the design and development of the process and system that minimizes the necessity of human intervention in their operation.’</i></p>  
+    <br><br><br><br><br><br><br><br>
 </div>
-<!-- </div>
-</div> -->
 </body>
 </html>
