--- a/startup.html
+++ b/startup.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>START-UP</title>
 	<link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
             
